{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 145,
  "lineage": "35043232-6867-597a-dc08-67f646123d93",
  "resources": [
    {
      "module": "module.aws-ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "slave",
      "provider": "module.aws-ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a0f1259dd1c90938",
            "arn": "arn:aws:ec2:ap-south-1:259566153554:instance/i-0fb6a273faede2a00",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fb6a273faede2a00",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "key-01",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04ac532cd6fd3bc80",
            "private_dns": "ip-10-2-4-29.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.2.4.29",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0206b2c185698bd66",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b1ab5efd72d0e347",
            "tags": {
              "Name": "MY_Terrafom_Instance-private-0"
            },
            "tags_all": {
              "Name": "MY_Terrafom_Instance-private-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-042d899f994174042"
            ]
          },
          "dependencies": [
            "module.aws-ec2.aws_security_group.Private-sg",
            "module.aws-ec2.aws_security_group.bastion-sg",
            "module.aws-vpc.aws_subnet.cluster-vpc-subnets-private",
            "module.aws-vpc.aws_vpc.my_vpc",
            "module.aws-vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a0f1259dd1c90938",
            "arn": "arn:aws:ec2:ap-south-1:259566153554:instance/i-0ce3b0326ffb529ef",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ce3b0326ffb529ef",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "key-01",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cf2bddcc5e79905a",
            "private_dns": "ip-10-2-4-181.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.2.4.181",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06b94fcd10c19fa59",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b1ab5efd72d0e347",
            "tags": {
              "Name": "MY_Terrafom_Instance-private-1"
            },
            "tags_all": {
              "Name": "MY_Terrafom_Instance-private-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-042d899f994174042"
            ]
          },
          "dependencies": [
            "module.aws-ec2.aws_security_group.Private-sg",
            "module.aws-ec2.aws_security_group.bastion-sg",
            "module.aws-vpc.aws_subnet.cluster-vpc-subnets-private",
            "module.aws-vpc.aws_vpc.my_vpc",
            "module.aws-vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws-ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "module.aws-ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a493f6d8c0886281",
            "arn": "arn:aws:ec2:ap-south-1:259566153554:instance/i-035513aca24288a60",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-035513aca24288a60",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "key-01",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-049913cb044510688",
            "private_dns": "ip-10-2-2-196.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.2.2.196",
            "public_dns": "ec2-3-110-101-172.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.110.101.172",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-023b1408041f838e5",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dd9e216e3ed9ffbe",
            "tags": {
              "Name": "MY_Terrafom_Instance-bastion-0"
            },
            "tags_all": {
              "Name": "MY_Terrafom_Instance-bastion-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09d0d12211252f9cd"
            ]
          },
          "dependencies": [
            "module.aws-ec2.aws_security_group.bastion-sg",
            "module.aws-vpc.aws_subnet.cluster-vpc-subnets-public",
            "module.aws-vpc.aws_vpc.my_vpc",
            "module.aws-vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws-ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Private-sg",
      "provider": "module.aws-ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:259566153554:security-group/sg-042d899f994174042",
            "description": "private security proup ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-042d899f994174042",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              },
              {
                "cidr_blocks": [],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09d0d12211252f9cd"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "T_private-sg",
            "name_prefix": "",
            "owner_id": "259566153554",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform_private_sg"
            },
            "tags_all": {
              "Name": "terraform_private_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a966b4e720bd27f9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-ec2.aws_security_group.bastion-sg",
            "module.aws-vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion-sg",
      "provider": "module.aws-ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:259566153554:security-group/sg-09d0d12211252f9cd",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09d0d12211252f9cd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all trafic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "T_bastion-sg",
            "name_prefix": "",
            "owner_id": "259566153554",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform_bastion_sg"
            },
            "tags_all": {
              "Name": "terraform_bastion_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a966b4e720bd27f9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_gate_way",
      "provider": "module.aws-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:259566153554:internet-gateway/igw-0fa50d45e9c77c3ea",
            "id": "igw-0fa50d45e9c77c3ea",
            "owner_id": "259566153554",
            "tags": {
              "Name": "my-terraform-igw"
            },
            "tags_all": {
              "Name": "my-terraform-igw"
            },
            "vpc_id": "vpc-0a966b4e720bd27f9"
          },
          "dependencies": [
            "module.aws-vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "terrform-igw-route",
      "provider": "module.aws-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0fa50d45e9c77c3ea",
            "id": "r-rtb-02b9ea26bbb55b3421080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02b9ea26bbb55b342",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-vpc.aws_internet_gateway.my_gate_way",
            "module.aws-vpc.aws_route_table.terraform-public",
            "module.aws-vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-private",
      "provider": "module.aws-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:259566153554:route-table/rtb-0104005a20d747ae0",
            "id": "rtb-0104005a20d747ae0",
            "owner_id": "259566153554",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my-terraform-rt-private01"
            },
            "tags_all": {
              "Name": "my-terraform-rt-private01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a966b4e720bd27f9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-public",
      "provider": "module.aws-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:259566153554:route-table/rtb-02b9ea26bbb55b342",
            "id": "rtb-02b9ea26bbb55b342",
            "owner_id": "259566153554",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fa50d45e9c77c3ea",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-terraform-rt-public01"
            },
            "tags_all": {
              "Name": "my-terraform-rt-public01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a966b4e720bd27f9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-private",
      "provider": "module.aws-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f72dda9890babc4",
            "route_table_id": "rtb-0104005a20d747ae0",
            "subnet_id": "subnet-06f12e679dcd21831"
          },
          "dependencies": [
            "module.aws-vpc.aws_route_table.terraform-private",
            "module.aws-vpc.aws_subnet.cluster-vpc-subnets-private",
            "module.aws-vpc.aws_vpc.my_vpc",
            "module.aws-vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0602c036d9d308805",
            "route_table_id": "rtb-0104005a20d747ae0",
            "subnet_id": "subnet-0b1ab5efd72d0e347"
          },
          "dependencies": [
            "module.aws-vpc.aws_route_table.terraform-private",
            "module.aws-vpc.aws_subnet.cluster-vpc-subnets-private",
            "module.aws-vpc.aws_vpc.my_vpc",
            "module.aws-vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public",
      "provider": "module.aws-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0123d282302ad5007",
            "route_table_id": "rtb-02b9ea26bbb55b342",
            "subnet_id": "subnet-0bfac99a45e5368f2"
          },
          "dependencies": [
            "module.aws-vpc.aws_route_table.terraform-public",
            "module.aws-vpc.aws_subnet.cluster-vpc-subnets-public",
            "module.aws-vpc.aws_vpc.my_vpc",
            "module.aws-vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0960839a245e2cc3f",
            "route_table_id": "rtb-02b9ea26bbb55b342",
            "subnet_id": "subnet-0dd9e216e3ed9ffbe"
          },
          "dependencies": [
            "module.aws-vpc.aws_route_table.terraform-public",
            "module.aws-vpc.aws_subnet.cluster-vpc-subnets-public",
            "module.aws-vpc.aws_vpc.my_vpc",
            "module.aws-vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cluster-vpc-subnets-private",
      "provider": "module.aws-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:259566153554:subnet/subnet-06f12e679dcd21831",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.2.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f12e679dcd21831",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "259566153554",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-terraform-private-subnet-0"
            },
            "tags_all": {
              "Name": "my-terraform-private-subnet-0"
            },
            "vpc_id": "vpc-0a966b4e720bd27f9"
          },
          "dependencies": [
            "module.aws-vpc.aws_vpc.my_vpc",
            "module.aws-vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:259566153554:subnet/subnet-0b1ab5efd72d0e347",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.2.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1ab5efd72d0e347",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "259566153554",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-terraform-private-subnet-1"
            },
            "tags_all": {
              "Name": "my-terraform-private-subnet-1"
            },
            "vpc_id": "vpc-0a966b4e720bd27f9"
          },
          "dependencies": [
            "module.aws-vpc.aws_vpc.my_vpc",
            "module.aws-vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cluster-vpc-subnets-public",
      "provider": "module.aws-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:259566153554:subnet/subnet-0bfac99a45e5368f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bfac99a45e5368f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "259566153554",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-terraform-public-subnet-0"
            },
            "tags_all": {
              "Name": "my-terraform-public-subnet-0"
            },
            "vpc_id": "vpc-0a966b4e720bd27f9"
          },
          "dependencies": [
            "module.aws-vpc.aws_vpc.my_vpc",
            "module.aws-vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:259566153554:subnet/subnet-0dd9e216e3ed9ffbe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.2.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd9e216e3ed9ffbe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "259566153554",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-terraform-public-subnet-1"
            },
            "tags_all": {
              "Name": "my-terraform-public-subnet-1"
            },
            "vpc_id": "vpc-0a966b4e720bd27f9"
          },
          "dependencies": [
            "module.aws-vpc.aws_vpc.my_vpc",
            "module.aws-vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "module.aws-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:259566153554:vpc/vpc-0a966b4e720bd27f9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-037f074fd26321909",
            "default_route_table_id": "rtb-0eb42bb173b2db7ca",
            "default_security_group_id": "sg-0555c78f72c64d2d2",
            "dhcp_options_id": "dopt-031fd4e672f7425b3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a966b4e720bd27f9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0eb42bb173b2db7ca",
            "owner_id": "259566153554",
            "tags": {
              "Name": "My-terraform-vpc"
            },
            "tags_all": {
              "Name": "My-terraform-vpc"
            }
          }
        }
      ]
    }
  ]
}